--- a/user-service/application.properties
+++ b/user-service/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://host.docker.internal:5455/userDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+server.port=8085
