--- a/company-service/application.properties
+++ b/company-service/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5454/companyDB
+spring.datasource.url=jdbc:postgresql://postgresC:5454/companyDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8084
