--- a/user-service/application.properties
+++ b/user-service/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5455/userDB
+spring.datasource.url=jdbc:postgresql://postgresU:5455/userDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8085
